# PVN_GLP1R_2P

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: boxclone.sh  boxclone2.sh
src/notebooks/: ROIviz.ipynb  behaviorviz.ipynb  classification.ipynb  compare_cells.ipynb  cue.ipynb  optogenetics_all.ipynb  single_rec_viz.ipynb  sucrosequinine.ipynb  sucrosesucralose.ipynb  sucrosewater.ipynb  trackROIs.ipynb  trackcells.ipynb  tracked_stateandseq.ipynb  untrackedstate.ipynb
src/scripts/: boxclone2.sh  checkmatfiles.sh  classify_2p.py  copy_stat.sh  delete_binaries.sh  lick_behav_analysis.py  move_tiffs.sh  process_2p.py  process_folders.sh  remove_tiffs.sh  scalebars.py  trackcells.py
