[project]
name = "my_analysis_project"
version = "0.1.0"
description = "A well-structured data analysis project"
authors = [{ name = "Your Name" }]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "pandas",
    "statsmodels",
    "scikit-image",
    "ipykernel", # For Jupyter compatibility # Optional: full JupyterLab
    "jupyterlab",
    "ipympl>=0.9.7",
    "pyqt5>=5.15.11",
    "cmap>=0.6.0",
]

[tool.uv]
# Optional: later you can lock deps with `uv pip compile`

